tests/snapshots/test_uigen_widget__console_log.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QPushButton *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupButtonClicked();
    }

private:
    enum class BindingIndex : unsigned {
    };

    void setupButtonClicked()
    {
        QObject::connect(this->root_, QOverload<bool>::of(&QAbstractButton::clicked), this->root_, [this]() { this->onButtonClicked(); });
    }

    void onButtonClicked()
    {
    b0:
        qDebug().noquote();
        qDebug().noquote() << "foo";
        qInfo().noquote() << 1;
        qWarning().noquote() << "bar" << 2;
        qCritical().noquote() << "baz" << 3e0 << this->root_;
        return;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QPushButton *const root_;
    Ui::MyType *const ui_;

};
} // namespace UiSupport

