tests/snapshots/test_uigen_widget__deduplicate_dynamic_binding_connections.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QDialog *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupDialogWindowTitle();
        this->updateDialogWindowTitle();
    }

private:
    void setupDialogWindowTitle()
    {
        QObject::connect(this->ui_->edit, &QLineEdit::textChanged, root_, [this]() { this->updateDialogWindowTitle(); });
    }

    void updateDialogWindowTitle()
    {
        this->root_->setWindowTitle(this->evalDialogWindowTitle());
    }

    QString evalDialogWindowTitle() const
    {
        QString a0;
        QString a1;
        QString a2;
    b0:
        a0 = this->ui_->edit->text();
        a1 = this->ui_->edit->text();
        a2 = a0 + a1;
        return a2;
    }

    QDialog *const root_;
    Ui::MyType *const ui_;

};
} // namespace UiSupport

