tests/snapshots/test_uigen_widget__deduplicate_dynamic_binding_senders.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QDialog *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setup_dialog_windowTitle();
        this->update_dialog_windowTitle();
    }

private:
    void setup_dialog_windowTitle()
    {
        auto *const combo = this->ui_->combo;

        QObject::connect(combo, &QComboBox::currentIndexChanged, root_, [this]() { this->update_dialog_windowTitle(); });
        QObject::connect(combo, &QComboBox::currentTextChanged, root_, [this]() { this->update_dialog_windowTitle(); });
    }

    void update_dialog_windowTitle()
    {
        this->root_->setWindowTitle(this->eval_dialog_windowTitle());
    }

    QString eval_dialog_windowTitle() const
    {
        int a0;
        bool a1;
        QString a2;
        QString a3;
    b0:
        a0 = this->ui_->combo->currentIndex();
        a1 = a0 == 0;
        if (a1)
            goto b1;
        else
            goto b2;
    b1:
        a3 = QStringLiteral("-");
        goto b3;
    b2:
        a2 = this->ui_->combo->currentText();
        a3 = a2;
        goto b3;
    b3:
        return a3;
    }

    QDialog *const root_;
    Ui::MyType *const ui_;

};
} // namespace UiSupport

