tests/snapshots/test_uigen_widget__dynamic_binding_with_static_cast.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QWidget *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupComboBoxCurrentIndex();
        this->updateComboBoxCurrentIndex();
    }

private:
    enum class BindingIndex : unsigned {
        ComboBoxCurrentIndex,
    };

    void setupComboBoxCurrentIndex()
    {
        QObject::connect(this->ui_->edit, QOverload<double>::of(&QDoubleSpinBox::valueChanged), this->root_, [this]() { this->updateComboBoxCurrentIndex(); });
    }

    void updateComboBoxCurrentIndex()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::ComboBoxCurrentIndex);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->comboBox->setCurrentIndex(this->evalComboBoxCurrentIndex());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    int evalComboBoxCurrentIndex()
    {
        double a0;
        int a1;
    b0:
        a0 = this->ui_->edit->value();
        a1 = static_cast<int>(a0);
        return a1;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QWidget *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

