tests/snapshots/test_uigen_widget__implicit_this_property_binding.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QCheckBox *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupCheckBoxChecked();
        this->updateCheckBoxChecked();
    }

private:
    enum class BindingIndex : unsigned {
        CheckBoxChecked,
    };

    void setupCheckBoxChecked()
    {
        QObject::connect(this->root_, &QWidget::windowTitleChanged, this->root_, [this]() { this->updateCheckBoxChecked(); });
    }

    void updateCheckBoxChecked()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::CheckBoxChecked);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setChecked(this->evalCheckBoxChecked());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    bool evalCheckBoxChecked()
    {
        QString a0;
        bool a1;
    b0:
        a0 = this->root_->windowTitle();
        a1 = a0 == QStringLiteral("");
        return a1;
    }

    QCheckBox *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

