tests/snapshots/test_uigen_widget__indirect_property_binding.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QWidget *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupWidgetVisible();
        this->updateWidgetVisible();
    }

private:
    enum class BindingIndex : unsigned {
        WidgetVisible,
    };

    void setupWidgetVisible()
    {
        QObject::connect(this->ui_->source, &QAbstractButton::toggled, this->root_, [this]() { this->updateWidgetVisible(); });
    }

    void updateWidgetVisible()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::WidgetVisible);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->widget->setVisible(this->evalWidgetVisible());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    bool evalWidgetVisible()
    {
        QCheckBox* a0;
        bool a1;
    b0:
        a0 = this->ui_->source;
        a1 = a0->isChecked();
        return a1;
    }

    QWidget *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

