tests/snapshots/test_uigen_widget__min_max.snap
---
source: tests/test_uigen_widget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QLabel *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupComboCurrentIndex();
        this->setupLabelText();
        this->updateComboCurrentIndex();
        this->updateLabelText();
    }

private:
    enum class BindingIndex : unsigned {
        ComboCurrentIndex,
        LabelText,
    };

    void setupComboCurrentIndex()
    {
        QObject::connect(this->ui_->spin, QOverload<int>::of(&QSpinBox::valueChanged), this->root_, [this]() { this->updateComboCurrentIndex(); });
    }

    void updateComboCurrentIndex()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::ComboCurrentIndex);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->ui_->combo->setCurrentIndex(this->evalComboCurrentIndex());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    int evalComboCurrentIndex()
    {
        int a0;
        int a1;
    b0:
        a0 = this->ui_->spin->value();
        a1 = qMax(a0, 0);
        return a1;
    }

    void setupLabelText()
    {
        QObject::connect(this->ui_->combo, QOverload<const QString &>::of(&QComboBox::currentTextChanged), this->root_, [this]() { this->updateLabelText(); });
    }

    void updateLabelText()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::LabelText);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setText(this->evalLabelText());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalLabelText()
    {
        QString a0;
        QString a1;
    b0:
        a0 = this->ui_->combo->currentText();
        a1 = qMin(a0, QStringLiteral("foo"));
        return a1;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QLabel *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

